fixed some spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3206,8 +3206,8 @@
 		#wrapper > header h2 {
 			border-bottom: solid 2px rgba(255, 255, 255, 0.125);
 			font-size: 2.5em;
-			margin-bottom: 0.8em;
-			padding-bottom: 0.4em;
+			margin-bottom: 0.4em;
+			padding-bottom: 0.2em;
 		}
 
 		#wrapper > header p {
